--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,3 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700&subset=cyrillic');
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+* {
+  font-family: 'Lato', sans-serif;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  height: 100%;
+}
