--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,6 @@
-<p>
-  home works!
-</p>
+<section class="container">
+  <h1>Register as a new client within an hour</h1>
+  <div fxLayout fxLayoutAlign="center center">
+    <button mat-button color="primary">Register</button>
+  </div>
+</section>
