--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="container">
   <h1>Register as a new client within an hour</h1>
   <div fxLayout fxLayoutAlign="center center">
-    <button mat-button color="primary">Register</button>
+    <button mat-button color="primary" (click)="registerClient()">Register</button>
   </div>
 </section>
