--- a/src/app/components/navigation/navbar/navbar.component.html
+++ b/src/app/components/navigation/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <div fxFlex fxLayout fxLayoutAlign="flex-end">
       <ul fxLayout fxLayoutGap="20px" class="navigation-items">
         <li><a routerLink="/">home</a></li>
-        <li><a routerLink="/clients">register</a></li>
+        <li><a routerLink="/clients/register">register</a></li>
       </ul>
     </div>
   </nav>
