Individual details subscriptions

--- a/src/app/components/client/individual-details/individual-details.component.html
+++ b/src/app/components/client/individual-details/individual-details.component.html
@@ -3,7 +3,7 @@
     <mat-card-header>
       <mat-card-title fxLayout fxLayoutAlign="center center" fxLayoutGap="10px">
         <mat-icon>account_box</mat-icon>
-        <span>{{client.firstName + ' ' + client.lastName}} ({{client.initials}})</span>
+        <span>{{person.firstName + ' ' + person.lastName}} ({{person.initials}})</span>
       </mat-card-title>
       <mat-card-subtitle>Dog Breed</mat-card-subtitle>
     </mat-card-header>
