Get particular registration from api

--- a/src/app/components/client/individual-details/individual-details.component.html
+++ b/src/app/components/client/individual-details/individual-details.component.html
@@ -1,5 +1,5 @@
 <section class="individual-details" fxLayout fxLayoutAlign="center">
-  <mat-card fxFlex="500px" fxFlex.xs="100%">
+  <mat-card fxFlex="500px" fxFlex.xs="100%" *ngIf="person">
     <mat-card-header>
       <mat-card-title fxLayout fxLayoutAlign="center center" fxLayoutGap="10px">
         <mat-icon>account_box</mat-icon>
