Registration forms layout

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,13 @@
 <section class="container">
-  <h1>Register as a new client within an hour</h1>
-  <div fxLayout fxLayoutAlign="center center">
-    <button mat-button color="primary" (click)="registerClient()">Register</button>
+  <div fxLayout="column" fxLayoutAlign="center center" fxFlex="600px">
+    <h1>Register a new client within an hour</h1>
+    <p>
+      The result is a legally accurate registration of your customer by using one easy-to-use module that you or your
+      customer can use anywhere on a computer or tablet with an internet connection. So no paper hassle anymore. And
+      more time to manage your client’s assets.
+    </p>
+    <div fxLayout fxLayoutAlign="center center">
+      <button mat-button color="primary" (click)="registerClient()">Register</button>
+    </div>
   </div>
 </section>
