--- a/src/app/components/client/individual-details/individual-details.component.html
+++ b/src/app/components/client/individual-details/individual-details.component.html
@@ -1,22 +1,5 @@
-<section class="individual-details" fxLayout fxLayoutAlign="center">
-  <mat-card fxFlex="500px" fxFlex.xs="100%" *ngIf="person">
-    <mat-card-header>
-      <mat-card-title fxLayout fxLayoutAlign="center center" fxLayoutGap="10px">
-        <mat-icon>account_box</mat-icon>
-        <span>{{person.firstName + ' ' + person.lastName}} ({{person.initials}})</span>
-      </mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
-      </p>
-    </mat-card-content>
-    <mat-card-actions fxLayout fxLayoutAlign="center center">
-      <button mat-button (click)="cancelRegistration()">CLOSE</button>
-    </mat-card-actions>
-  </mat-card>
-</section>
+<am-individual-details-card [person]="person" *ngIf="person"></am-individual-details-card>
+<div fxLayout fxLayoutAlign="center">
+  <button mat-button (click)="cancelRegistration()">CLOSE</button>
+</div>
 
