--- a/src/app/components/client/register-individual/register-individual.component.html
+++ b/src/app/components/client/register-individual/register-individual.component.html
@@ -1,3 +1,92 @@
-<p>
-  register-individual works!
-</p>
+<section class="stepper">
+  <mat-horizontal-stepper [linear]="true" #stepper="matHorizontalStepper">
+    <mat-step>
+      <form fxLayout="column" fxLayoutAlign="center stretch" #detailsForm="ngForm">
+        <ng-template matStepLabel>Basic details</ng-template>
+        <mat-form-field>
+          <mat-select placeholder="Sex" name="sex" ngModel>
+            <mat-option value="M">Male</mat-option>
+            <mat-option value="F">Female</mat-option>
+            <mat-option value="NA">Not Applicable</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Initials" name="initials" ngModel required>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="First Name" name="firstName" ngModel required>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Last Name" name="lastName" ngModel required>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput [matDatepicker]="picker" placeholder="Date of Birth" name="birthday" ngModel>
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-select placeholder="Nationality" name="nationality" ngModel>
+            <mat-option value="France">France</mat-option>
+            <mat-option value="Germany">Germany</mat-option>
+            <mat-option value="Netherlands">Netherlands</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Social Security Number" name="ssn" ngModel  required>
+        </mat-form-field>
+        <div fxLayout>
+          <button mat-button>Cancel</button>
+          <div fxFlex></div>
+          <button mat-button matStepperNext color="primary" [disabled]="detailsForm.invalid">Next</button>
+        </div>
+      </form>
+    </mat-step>
+    <mat-step>
+      <form fxLayout="column" fxLayoutAlign="center stretch" #addressForm="ngForm">
+        <ng-template matStepLabel>Address details</ng-template>
+        <mat-form-field>
+          <input matInput placeholder="Address Line 1" name="line1" ngModel required>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Address Line 2" name="line2" ngModel>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Postal Code" name="postalCode" ngModel>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="City" name="city" ngModel required>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-select placeholder="Country" name="country" ngModel>
+            <mat-option value="France">France</mat-option>
+            <mat-option value="Germany">Germany</mat-option>
+            <mat-option value="Netherlands">Netherlands</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Phone Number" name="phone" ngModel required>
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Email" name="email" ngModel>
+        </mat-form-field>
+        <div fxLayout>
+          <button mat-button>Cancel</button>
+          <div fxFlex></div>
+          <button mat-button matStepperPrevious>Back</button>
+          <button mat-button matStepperNext color="primary" [disabled]="addressForm.invalid">Next</button>
+        </div>
+      </form>
+    </mat-step>
+    <mat-step>
+      <ng-template matStepLabel>Confirmation</ng-template>
+      <am-individual-details-card></am-individual-details-card>
+      <div fxLayout>
+        <button mat-button>Cancel</button>
+        <div fxFlex></div>
+        <button mat-button matStepperPrevious>Back</button>
+        <button mat-raised-button matStepperPrevious color="primary">Confirm</button>
+      </div>
+    </mat-step>
+  </mat-horizontal-stepper>
+</section>
+
