--- a/src/app/root.component.html
+++ b/src/app/root.component.html
@@ -8,7 +8,7 @@
         </p>
         <div>
           <button type="button" mat-raised-button color="primary" (click)="registerClient()">
-            Register as a new client
+            Register a new client
           </button>
         </div>
       </div>
