--- a/src/app/components/client/register-individual/register-individual.component.html
+++ b/src/app/components/client/register-individual/register-individual.component.html
@@ -1,4 +1,4 @@
-<section class="stepper">
+<section class="stepper" *ngIf="!registrationId">
   <mat-horizontal-stepper [linear]="true" #stepper="matHorizontalStepper">
     <mat-step>
       <form fxLayout="column" fxLayoutAlign="center stretch" #detailsForm="ngForm">
@@ -20,7 +20,7 @@
           <input matInput placeholder="Last Name" name="lastName" ngModel required>
         </mat-form-field>
         <mat-form-field>
-          <input matInput [matDatepicker]="picker" placeholder="Date of Birth" name="birthday" ngModel>
+          <input matInput [matDatepicker]="picker" placeholder="Date of Birth" name="dateOfBirth" ngModel>
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
@@ -32,10 +32,10 @@
           </mat-select>
         </mat-form-field>
         <mat-form-field>
-          <input matInput placeholder="Social Security Number" name="ssn" ngModel  required>
+          <input matInput placeholder="Social Security Number" name="socialSecurityNumber" ngModel  required>
         </mat-form-field>
         <div fxLayout>
-          <button mat-button>Cancel</button>
+          <button mat-button (click)="cancelRegistration()">Cancel</button>
           <div fxFlex></div>
           <button mat-button matStepperNext color="primary" [disabled]="detailsForm.invalid">Next</button>
         </div>
@@ -70,23 +70,29 @@
           <input matInput placeholder="Email" name="email" ngModel>
         </mat-form-field>
         <div fxLayout>
-          <button mat-button>Cancel</button>
+          <button mat-button (click)="cancelRegistration()">Cancel</button>
           <div fxFlex></div>
           <button mat-button matStepperPrevious>Back</button>
-          <button mat-button matStepperNext color="primary" [disabled]="addressForm.invalid">Next</button>
+          <button mat-button matStepperNext color="primary"
+                  [disabled]="addressForm.invalid"
+                  (click)="fillPerson()">Next
+          </button>
         </div>
       </form>
     </mat-step>
     <mat-step>
       <ng-template matStepLabel>Confirmation</ng-template>
-      <am-individual-details-card></am-individual-details-card>
+      <am-individual-details-card [person]="person" *ngIf="person"></am-individual-details-card>
       <div fxLayout>
-        <button mat-button>Cancel</button>
+        <button mat-button (click)="cancelRegistration()">Cancel</button>
         <div fxFlex></div>
         <button mat-button matStepperPrevious>Back</button>
-        <button mat-raised-button matStepperPrevious color="primary">Confirm</button>
+        <button mat-raised-button matStepperPrevious color="primary" (click)="registerPerson()">Confirm</button>
       </div>
     </mat-step>
   </mat-horizontal-stepper>
+</section>
+<section class="confirmation" *ngIf="registrationId">
+  {{registrationId}}
 </section>
 
