--- a/src/app/components/navigation/navbar/navbar.component.html
+++ b/src/app/components/navigation/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar fxLayoutAlign="center center">
-  <nav fxLayout fxLayoutAlign="center" fxFlex="1200px">
+  <nav fxLayout fxLayoutAlign="center" fxFlex="1200px" fxFlex.lt-md="100%">
     <div fxFlex>
       Asset Management
     </div>
