--- a/src/app/components/client/individual-details-card/individual-details-card.component.html
+++ b/src/app/components/client/individual-details-card/individual-details-card.component.html
@@ -1,18 +1,28 @@
 <section class="individual-details" fxLayout fxLayoutAlign="center">
   <mat-card fxFlex="500px" fxFlex.xs="100%">
     <mat-card-header>
-      <mat-card-title fxLayout fxLayoutAlign="center center" fxLayoutGap="10px">
+      <mat-card-title fxLayout fxLayoutAlign="start center" fxLayoutGap="10px">
         <mat-icon>account_box</mat-icon>
-        <span>{{person?.firstName + ' ' + person?.lastName}} ({{person?.initials}}) {{person?.sex}}</span>
+        <span>{{person?.firstName + ' ' + person?.lastName}} [{{person?.initials}}]</span>
       </mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
-      </p>
+      <div>
+        <p>Sex: <span>{{person?.sex || '---'}}</span></p>
+        <p>Date of Birth: <span>{{person?.dateOfBirth | date:'yyyy-MM-dd' || '---'}}</span></p>
+        <p>Nationality: <span>{{person?.nationality || '---'}}</span></p>
+        <p>Social Security Number: <span>{{person?.socialSecurityNumber || '---'}}</span></p>
+      </div>
+      <hr>
+      <div>
+        <p>Address Line 1: <span>{{person?.address?.line1 || '---'}}</span></p>
+        <p>Address Line 2: <span>{{person?.address?.line2 || '---'}}</span></p>
+        <p>Postal Code: <span>{{person?.address?.postalCode || '---'}}</span></p>
+        <p>City: <span>{{person?.address?.city || '---'}}</span></p>
+        <p>Country: <span>{{person?.address?.country || '---'}}</span></p>
+        <p>Phone: <span>{{person?.phone || '---'}}</span></p>
+        <p>Email: <span>{{person?.email || '---'}}</span></p>
+      </div>
     </mat-card-content>
   </mat-card>
 </section>
