--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-  <div fxLayout="column" fxLayoutAlign="center center" fxFlex="600px">
+  <div fxLayout="column" fxLayoutAlign="center center" fxFlex="600px" fxFlex.lt-sm="100%">
     <h1>Register a new client within an hour</h1>
     <p>
       The result is a legally accurate registration of your customer by using one easy-to-use module that you or your
