--- a/src/app/root.component.html
+++ b/src/app/root.component.html
@@ -16,7 +16,7 @@
   </header>
   <am-navbar></am-navbar>
   <main fxLayout fxLayoutAlign="center center">
-    <div fxLayout fxLayoutAlign="center" fxFlex="1200px">
+    <div fxLayout fxLayoutAlign="center" fxFlex="1200px" fxFlex.lt-md="100%">
       <router-outlet></router-outlet>
     </div>
   </main>
