--- a/src/app/root.component.scss
+++ b/src/app/root.component.scss
@@ -27,3 +27,19 @@
   }
 }
 
+@media (min-width: 768px) and (max-width: 967px) {
+  .heading {
+    .title {
+      margin-left: 60px;
+    }
+  }
+}
+
+@media (min-width: 968px) and (max-width: 1200px) {
+  .heading {
+    .title {
+      margin-left: 90px;
+    }
+  }
+}
+
